force-app/main/default/objects/Hardware__c/Hardware__c.object-meta.xml
<CustomObject>
    <label>Hardware</label>
    <pluralLabel>Hardware</pluralLabel>
    <nameField>
        <label>Hardware Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>