force-app/main/default/objects/Hardware__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hardware Assignments</relationshipLabel>
    <relationshipName>Hardware_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>