force-app/main/default/objects/Hardware__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>