force-app/main/default/objects/Hardware__c/fields/Expected_Life_Span_Years__c.field-meta.xml
<CustomField>
    <fullName>Expected_Life_Span_Years__c</fullName>
    <description>Expected life span of the hardware in years</description>
    <label>Expected Life Span (Years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>