force-app/main/default/objects/Hardware__c/fields/Life_Span_Consumed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Life_Span_Consumed_Percentage__c</fullName>
    <description>Calculates the percentage of the expected life span that has been consumed.</description>
    <formula>IF(Expected_Life_Span_Years__c &gt; 0, ((YEAR(TODAY()) - Year_of_Manufacture__c) / Expected_Life_Span_Years__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Life Span Consumed Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>