force-app/main/default/objects/Hardware__c/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <description>Operating System installed on the hardware</description>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows 11</fullName>
            </value>
            <value>
                <fullName>macOS Sonoma</fullName>
            </value>
            <value>
                <fullName>macOS Ventura</fullName>
            </value>
            <value>
                <fullName>Ubuntu Linux</fullName>
            </value>
            <value>
                <fullName>ChromeOS</fullName>
            </value>
            <value>
                <fullName>None / N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>