force-app/main/default/objects/Hardware__c/fields/Power_Adapter_Provided__c.field-meta.xml
<CustomField>
    <fullName>Power_Adapter_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power Adapter Provided</label>
    <type>Checkbox</type>
</CustomField>