force-app/main/default/objects/Hardware__c/fields/Processor_Generation__c.field-meta.xml
<CustomField>
    <fullName>Processor_Generation__c</fullName>
    <label>Chip/Processor Generation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>