force-app/main/default/objects/Hardware__c/fields/Storage_Capacity_SSD__c.field-meta.xml
<CustomField>
    <fullName>Storage_Capacity_SSD__c</fullName>
    <label>Storage Capacity (SSD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>