force-app/main/default/objects/Hardware__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>Headphones</fullName>
            </value>
            <value>
                <fullName>Keyboard Mouse Combo</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>Modem</fullName>
            </value>
            <value>
                <fullName>Network Hardware</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>