force-app/main/default/objects/Hardware__c/fields/Unified_Memory_RAM__c.field-meta.xml
<CustomField>
    <fullName>Unified_Memory_RAM__c</fullName>
    <label>Unified Memory (RAM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>