force-app/main/default/objects/Hardware__c/fields/Year_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Manufacture__c</fullName>
    <description>Year the hardware was manufactured</description>
    <label>Year of Manufacture</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>